docs: swagger for create book endpoint
